# stableml-playground-test

./: pyproject.toml
src/: main.py
