[tool.poetry]
name = "stable-sample"
version = "0.1.0"
description = ""
authors = ["Max Gonzih <gonzih@gmail.com>"]
readme = "README.md"
packages = [{include = "stable_sample"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.28.1"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
